--- a/PersonalBlog/PersonalBlog.API/appsettings.json
+++ b/PersonalBlog/PersonalBlog.API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "PersonalBlog": "Server=.;Database=PersonalBlogDB;Trusted_Connection=True;TrustServerCertificate=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "http://localhost:44394",
+    "Secret": "TheStrongestSecretEverMade",
+    "ExpirationInDays": 30
+  }
 }
