--- a/PersonalBlog/PersonalBlog.BLL/PersonalBlog.BLL.csproj
+++ b/PersonalBlog/PersonalBlog.BLL/PersonalBlog.BLL.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
     </ItemGroup>
