implement refresh and access tokens

--- a/PersonalBlog/PersonalBlog.API/appsettings.json
+++ b/PersonalBlog/PersonalBlog.API/appsettings.json
@@ -12,6 +12,6 @@
   "Jwt": {
     "Issuer": "http://localhost:44394",
     "Secret": "TheStrongestSecretEverMade",
-    "ExpirationInDays": 30
+    "ExpirationInHours": 1
   }
 }
