--- a/PersonalBlog/PersonalBlog.FrontEnd/personal-blog-frontend/package.json
+++ b/PersonalBlog/PersonalBlog.FrontEnd/personal-blog-frontend/package.json
@@ -11,27 +11,30 @@
     "build:css": "tailwindcss build -i ./src/index.css -o ./public/index.css --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@mui/material": "^5.15.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "axios": "^1.6.2",
     "dom": "^0.0.3",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.1",
     "router": "^1.3.8",
-    "styled-components": "^6.1.2"
+    "styled-components": "^6.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
     "vite": "^5.0.0"
   }
 }
