--- a/PersonalBlog/PersonalBlog.API/appsettings.json
+++ b/PersonalBlog/PersonalBlog.API/appsettings.json
@@ -8,6 +8,14 @@
   "ConnectionStrings": {
     "PersonalBlog": "Server=.;Database=PersonalBlogDB;Trusted_Connection=True;TrustServerCertificate=true"
   },
+  "EmailSettings": {
+    "DefaultFromEmail": "per70nal.bl0g@gmail.com",
+    "SMTPSetting:Host": "smtp.gmail.com",
+    "Port": "587",
+    "UserName": "Personal Blog",
+    "Password": "nxxg berd kjls pebd",
+    "MessagePath": "MessageToSend.cshtml"
+  },
   "AllowedHosts": "*",
   "Jwt": {
     "Issuer": "http://localhost:44394",
